fix: sudo apt-get install -y texlive-xetex

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -152,13 +152,10 @@ jobs:
           git config --local user.email "actions@github.com"
 
       - name: Install TeX Live
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y texlive-xetex
-            - name: Install Pandoc
-              run: |
-                sudo apt-get update
-                sudo apt-get install -y pandoc
+        run: sudo apt-get install -y texlive-xetex
+          
+      - name: Install Pandoc
+        run: sudo apt-get install -y pandoc
           
       - name: Convert Execution Log to PDF
         run: |
