--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -165,12 +165,14 @@ jobs:
       - name: Generate Workflow Log PDF
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cd ${{ github.workspace }}/automation
-          gh run view ${{ github.run_id }} --log > workflow_log.txt
-          pandoc workflow_log.txt -o workflow_log.pdf
-        if: always()
-            
+          run: |
+            cd ${{ github.workspace }}/automation
+            while gh run view ${{ github.run_id }} --log > workflow_log.txt | grep -q "still in progress"; do
+              sleep 10s
+            done
+            pandoc workflow_log.txt -o workflow_log.pdf
+          if: always()
+                  
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         if: always()
