--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -164,14 +164,25 @@ jobs:
         
       - name: Generate Workflow Log PDF
         env:
-            GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-            cd ${{ github.workspace }}/automation
-            while gh run view ${{ github.run_id }} --log > workflow_log.txt && grep -q "still in progress" workflow_log.txt; do
-              sleep 10s
-            done
-            pandoc workflow_log.txt -o workflow_log.pdf
+          cd ${{ github.workspace }}/automation
+          gh run view ${{ github.run_id }} --log > workflow_log.txt
+          while grep -q "still in progress" workflow_log.txt; do
+            sleep 10s
+            gh run view ${{ github.run_id }} --log >> workflow_log.txt
+          done
+          pandoc workflow_log.txt -o workflow_log.pdf
+          mkdir -p artifacts
+          mv workflow_log.pdf artifacts/
         if: always()
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: "Audit Report ${{ github.actor }} - ${{ github.run_number }} "
+          path: ${{ github.workspace }}/automation/artifacts
 
 
       - name: Convert Workflow Log to PDF
