--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -162,9 +162,13 @@ jobs:
           cd ${{ github.workspace }}/automation
           jupyter nbconvert --to pdf "${{ github.workspace }}/automation/${{ github.event.inputs.name }}" --output "${{ github.workspace }}/automation/${{ github.event.inputs.name }}_log.pdf"
         
+      - name: Get Run ID
+        id: get_run_id
+        run: echo "::set-output name=run_id::$(gh run view ${{ github.run_id }} --json id)"
+
       - name: Wait for Run Completion
         run: |
-          while gh run view ${{ github.run_id }} | grep -q "is still in progress"; do
+          while gh run view ${{ steps.get_run_id.outputs.run_id }} --json status | jq -r '.status' | grep -q "in_progress"; do
             sleep 10s
           done
 
@@ -173,7 +177,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd ${{ github.workspace }}/automation
-          gh run view ${{ github.run_id }} --log > workflow_log.txt
+          gh run view ${{ steps.get_run_id.outputs.run_id }} --log > workflow_log.txt
           pandoc workflow_log.txt -o workflow_log.pdf
 
       - name: Create Artifacts
