--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -132,31 +132,36 @@ jobs:
         
       - name: Execute Jupyter Notebook
         run: |
-           cd ${{ github.workspace }}/examples
-           pwd
-
-           # Execute the Jupyter notebook and save the output to a new notebook
-           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }}
-
+          cd ${{ github.workspace }}/examples
+          pwd
+      
+          # Execute the Jupyter notebook and save the output to a new notebook
+          jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }}
+      
+      - name: Check for Local Changes
+        run: |
+          cd ${{ github.workspace }}/automation
+          git diff --quiet || git commit -am "committing local changes"
+      
       - name: commit updated notebook
         uses: EndBug/add-and-commit@v7
         with:
           author_name: Plot update bot
-          message: "Added executed notebook"
+          message: "added executed notebook"
           add: "${{ github.workspace }}/automation/${{ github.event.inputs.name }}"
-        
-        # Add a new step to commit and push the changes
+      
+      # Add a new step to commit and push the changes
       - name: Commit and Push Changes
         run: |
           git config --local user.name actions-user
           git config --local user.email "actions@github.com"
-
+      
       - name: Install TeX Live
         run: sudo apt-get install -y texlive-xetex
-          
+            
       - name: Install Pandoc
         run: sudo apt-get install -y pandoc
-          
+            
       - name: Convert Execution Log to PDF
         run: |
           cd ${{ github.workspace }}/automation
@@ -166,7 +171,7 @@ jobs:
         id: get_run_id
         run: |
           echo "::set-output name=run_id::$(gh run view ${{ github.run_id }} --json id)"
-
+      
       - name: Wait for Run Completion
         run: |
           while true; do
@@ -176,7 +181,7 @@ jobs:
             fi
             sleep 10s
           done
-
+      
       - name: Generate Workflow Log PDF
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -184,18 +189,18 @@ jobs:
           cd ${{ github.workspace }}/automation
           gh run view ${{ steps.get_run_id.outputs.run_id }} --log > workflow_log.txt
           pandoc workflow_log.txt -o workflow_log.pdf
-
+      
       - name: Create Artifacts
         run: |
           mkdir -p artifacts
           mv workflow_log.pdf artifacts/
-      
+        
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: "Audit Report ${{ github.actor }} - ${{ github.run_number }} "
           path: ${{ github.workspace }}/automation/artifacts
-          
+                
   build-r:
     runs-on: ubuntu-latest
 
