--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -137,7 +137,7 @@ jobs:
       
           # Execute the Jupyter notebook and save the output to a new notebook
           jupyter nbconvert --to notebook --execute ${{ github.workspace }}/examples/${{ github.event.inputs.notebook }} --output ${{ github.workspace }}/automation/${{ github.event.inputs.name }}
-
+      
       - name: Set up Git identity
         run: |
           git config --global user.email "you@example.com"
@@ -175,7 +175,7 @@ jobs:
       - name: Get Run ID
         id: get_run_id
         run: |
-          echo "::set-output name=run_id::$(gh run view ${{ github.run_id }} --json id)"
+          echo "::set-output name=run_id::$(gh run list --json workflow_id=$GITHUB_WORKFLOW | jq -r '.runs[0].id')"
       
       - name: Wait for Run Completion
         run: |
