fix: env variables

--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -175,6 +175,7 @@ jobs:
       - name: Get Run ID
         id: get_run_id
         run: |
+          echo "::set-env name=GH_TOKEN::${{ secrets.GITHUB_TOKEN }}"
           echo "::set-output name=run_id::$(gh run list --json workflow_id=${{ github.event.workflow.id }} | jq -r '.runs[0].id')"
       
       - name: Wait for Run Completion
