--- a/.github/workflows/bias-mitigation-automation.yml
+++ b/.github/workflows/bias-mitigation-automation.yml
@@ -178,8 +178,9 @@ jobs:
         id: get_run_id
         run: |
           echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
-          echo "::set-output name=run_id::$(gh run list --json workflow_id=${{ github.event.workflow.id }} | jq -r '.runs[0].id')"
-      
+          echo "::set-output name=run_id::$(gh run list --json | jq -r 'select(.workflowName == "⚖ Bias Mitigation Automation") | .runs[0].id')"
+          echo "Latest Run ID: ${{ steps.get_run_id.outputs.run_id }}"
+ 
       - name: Wait for Run Completion
         run: |
           while true; do
